@@ -30,6 +30,17 @@ public class SelectorTest {
         assertEquals(0, none.size());
     }
 
+    @Test public void byEscapedTag() {
+        // tested same result as js document.querySelector
+        Document doc = Jsoup.parse("<p.p>One</p.p> <p\\p>Two</p\\p>");
+
+        Element one = doc.expectFirst("p\\.p");
+        assertEquals("One", one.text());
+
+        Element two = doc.expectFirst("p\\\\p");
+        assertEquals("Two", two.text());
+    }
+
     @Test public void testById() {
         Elements els = Jsoup.parse("<div><p id=foo>Hello</p><p id=foo>Foo two!</p></div>").select("#foo");
         assertEquals(2, els.size());
@@ -38,6 +49,19 @@ public class SelectorTest {
 
         Elements none = Jsoup.parse("<div id=1></div>").select("#foo");
         assertEquals(0, none.size());
+    }
+
+    @Test public void byEscapedId() {
+        Document doc = Jsoup.parse("<p id='i.d'>One</p> <p id='i\\d'>Two</p> <p id='one-two/three'>Three</p>");
+
+        Element one = doc.expectFirst("#i\\.d");
+        assertEquals("One", one.text());
+
+        Element two = doc.expectFirst("#i\\\\d");
+        assertEquals("Two", two.text());
+
+        Element thr = doc.expectFirst("p#one-two\\/three");
+        assertEquals("Three", thr.text());
     }
 
     @Test public void testByClass() {
@@ -51,6 +75,13 @@ public class SelectorTest {
 
         Elements els2 = Jsoup.parse("<div class='One-Two'></div>").select(".one-two");
         assertEquals(1, els2.size());
+    }
+
+    @Test public void byEscapedClass() {
+        Element els = Jsoup.parse("<p class='one.two#three'>One</p>");
+
+        Element one = els.expectFirst("p.one\\.two\\#three");
+        assertEquals("One", one.text());
     }
 
     @Test public void testByClassCaseInsensitive() {
